--- a/Report/project.bib
+++ b/Report/project.bib
@@ -62,15 +62,16 @@
 
 @misc{GGP-Website,
   title		= {GDL website},
-  url		= {http://ggp.stanford.edu/iggpc/}
+  url		= {http://ggp.stanford.edu/iggpc/},
+  author	= {Michael Genesereth}
 }
 
 
 
 @misc{GDL_Spec,
   title		= {General Game Playing: Game Description Language Specification},
-  author	= {Nathaniel Love, Timothy Hinrichs, David Haley, Eric Schkufza, Michael Genesereth},
-  year = {2006}
+  author	= {Nathaniel Love and Timothy Hinrichs and David Haley and Eric Schkufza and Michael Genesereth},
+  year 		= {2006}
 }
 
 @techreport{PrologISO,
@@ -191,7 +192,6 @@
                Digital Entertainment Conference, October 22-24, 2008, Stanford, California,
                {USA}},
   year      = {2008},
-  crossref  = {DBLP:conf/aiide/2008},
   url       = {http://www.aaai.org/Library/AIIDE/2008/aiide08-036.php},
   timestamp = {Wed, 12 Dec 2012 16:45:08 +0100},
   biburl    = {https://dblp.org/rec/conf/aiide/ChaslotBSS08.bib},
@@ -243,7 +243,6 @@
                Learning, Berlin, Germany, September 18-22, 2006, Proceedings},
   pages     = {282--293},
   year      = {2006},
-  crossref  = {DBLP:conf/ecml/2006},
   url       = {https://doi.org/10.1007/11871842\_29},
   doi       = {10.1007/11871842\_29},
   timestamp = {Tue, 14 May 2019 10:00:54 +0200},
@@ -271,6 +270,124 @@
   title		= {Extraction of meta-knowledge to restrict the hypothesis space for ILP systems},
   booktitle	= {Proc. of the 8th Australian Joint Conf. on AI},
   year	 	= {1995}
+}
+
+@article{Rolf/Metagol,
+  author    = {Andrew Cropper and
+               Rolf Morel and
+               Stephen H. Muggleton},
+  title     = {Learning higher-order logic programs},
+  journal   = {CoRR},
+  volume    = {abs/1907.10953},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1907.10953},
+  archivePrefix = {arXiv},
+  eprint    = {1907.10953},
+  timestamp = {Thu, 01 Aug 2019 08:59:33 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1907-10953.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@misc {Metagol/Github,
+  author    = {Andrew Cropper and Stephen H. Muggleton},
+  title  = {Metagol System},
+  year   = {2016},
+  howpublished = "https://github.com/metagol/metagol",
+  URL = "https://github.com/metagol/metagol"
+}
+@article{MarkLaw/ILASP2,
+  author    = {Mark Law and
+               Alessandra Russo and
+               Krysia Broda},
+  title     = {Learning weak constraints in answer set programming},
+  journal   = {Theory Pract. Log. Program.},
+  volume    = {15},
+  number    = {4-5},
+  pages     = {511--525},
+  year      = {2015},
+  url       = {https://doi.org/10.1017/S1471068415000198},
+  doi       = {10.1017/S1471068415000198},
+  timestamp = {Thu, 13 Feb 2020 14:39:46 +0100},
+  biburl    = {https://dblp.org/rec/journals/tplp/LawRB15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@phdthesis{MarkLaw/Thesis,
+  author    = {Mark Law},
+  title     = {Inductive learning of answer set programs},
+  school    = {Imperial College London, {UK}},
+  year      = {2018},
+  url       = {http://ethos.bl.uk/OrderDetails.do?uin=uk.bl.ethos.762179},
+  timestamp = {Thu, 04 Apr 2019 15:51:17 +0200},
+  biburl    = {https://dblp.org/rec/phd/ethos/Law18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@techreport{ILASP-Manuel,
+  author	= {Mark Law},
+  title		= {ILASP Manuel}
+}
+@inproceedings{MarkLaw/OG-ILASP,
+  author    = {Mark Law and
+               Alessandra Russo and
+               Krysia Broda},
+  title     = {Inductive Learning of Answer Set Programs},
+  booktitle = {Logics in Artificial Intelligence - 14th European Conference,
+               2014, Funchal, Madeira, Portugal, September 24-26, 2014. Proceedings},
+  pages     = {311--325},
+  year      = {2014},
+  url       = {https://doi.org/10.1007/978-3-319-11558-0\_22},
+  doi       = {10.1007/978-3-319-11558-0\_22},
+  timestamp = {Sun, 02 Jun 2019 21:18:44 +0200},
+  biburl    = {https://dblp.org/rec/conf/jelia/LawRB14.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@inproceedings{Corapi/ASP,
+  author    = {Domenico Corapi and
+               Alessandra Russo and
+               Emil Lupu},
+  title     = {Inductive Logic Programming in Answer Set Programming},
+  booktitle = {Inductive Logic Programming - 21st International Conference, ILP
+               2011, Windsor Great Park, UK, July 31 - August 3, 2011, Revised Selected
+               Papers},
+  pages     = {91--97},
+  year      = {2011},
+  url       = {https://doi.org/10.1007/978-3-642-31951-8\_12},
+  doi       = {10.1007/978-3-642-31951-8\_12},
+  timestamp = {Sun, 02 Jun 2019 21:23:12 +0200},
+  biburl    = {https://dblp.org/rec/conf/ilp/CorapiRL12.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@phdthesis{Cropper/Thesis,
+  author    = {Andrew Cropper},
+  title     = {Efficiently learning efficient programs},
+  school    = {Imperial College London, {UK}},
+  year      = {2017},
+  url       = {http://ethos.bl.uk/OrderDetails.do?uin=uk.bl.ethos.739700},
+  timestamp = {Tue, 26 Mar 2019 19:31:01 +0100},
+  biburl    = {https://dblp.org/rec/phd/ethos/Cropper17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{Horssen/Checkers,
+  author    = {Jan{-}Jaap van Horssen},
+  title     = {Complexity of checkers and draughts on different board sizes},
+  journal   = {{ICGA} Journal},
+  volume    = {40},
+  number    = {4},
+  pages     = {341--352},
+  year      = {2018},
+  url       = {https://doi.org/10.3233/ICG-190077},
+  doi       = {10.3233/ICG-190077},
+  timestamp = {Wed, 03 Apr 2019 17:37:27 +0200},
+  biburl    = {https://dblp.org/rec/journals/icga/Horssen18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{Felgenhauer/Suduko,
+author = {Felgenhauer, Bertram and Jarvis, Frazer},
+year = {2006},
+month = {01},
+pages = {},
+title = {Mathematics of Sudoku I},
+volume = {39},
+journal = {Mathematical Spectrum}
 }
 
 
