--- a/Report/project.tex
+++ b/Report/project.tex
@@ -66,7 +66,7 @@ Given a game state the basic MCTS will return the most promising next move. The 
 The use of random simulation to evaluate game states is a powerful tool. Information about the game such as heuristics for evaluating non terminal states are not needed at all, the rules of the game are enough on their own. In the case of the GGP problem this is ideal. The rules of the game are only revealed shortly before the game is played meaning deriving effective heuristics is a hard problem.
 
 In our case all games being played are sequential, finite and discrete so we only need to consider MCTS for this case.
-%say why it is good for this
+% say why it is good for this
 
 % possibly put in a diagram of game tree
 The MCTS is a tree search algorithm, the tree being searched is the game tree. A game tree being a tree made up of nodes representing states of the game and the children of each node being all the states that can be moved to from that state. The leaves of this tree are the terminal states. The search is a sequence of traversals of the game tree. A traversal is a path that starts at the root node and continues down until it reaches a node that has at least one unvisited child. One of these unvisited children are then chosen to be the start state for a simulation of the rest of the game. The simulation chooses random moves, playing the game out to a terminal state. The result of the simulation is propagated back from the node it started at all the way to the root node to update statistics attached to each node. These statistics are used to choose future paths to traverse so more promising moves are investigated more.
@@ -88,7 +88,7 @@ The identification of possible heuristics takes place in two stages. The first o
 \chapter{ILP systems used}
 We use three ILP systems to compare the effects of different learning data, Metagol, Aleph and ILASP. All three systems use different approaches the ILP problem.
 \section{Metagol}
-The Metagol ILP system is a meta-interpreter for Prolog, that is, it is written in the same language is evaluates. Metagol takes positive and negative examples, background knowledge and meta-rules. Meta rules are specific to Metagol. They determin the shape of the induced rules and are used to guide the search for a hypothesis. An example of a metarule is the \texttt{chain} rule \[P(A,B) \leftarrow Q(A,C),R(C,B)\] The letters P, Q and R represent existentially quantified second order variables, A, B and C are regular Prolog variables. When trying to induce rules the second order variables are substituted for predicates from the background knowledge or the hypothesis itself. To illustrate this consider a metarule being applied when learning the predicate \textit{last(a,b)} where a is a list and b is the last element in it. Given the positive example 
+The Metagol ILP system is a meta-interpreter for Prolog, that is, it is written in the same language is evaluates. Metagol takes positive and negative examples, background knowledge and meta-rules. Meta rules are specific to Metagol. They determin the shape of the induced rules and are used to guide the search for a hypothesis. An example of a metarule is the \texttt{chain} rule \[P(A,B) \leftarrow Q(A,C),R(C,B)\] The letters P, Q and R represent existentially quantified second order variables, A, B and C are regular Prolog variables. When trying to induce rules the second order variables are substituted for predicates from the background knowledge or the hypothesis itself. To illustrate this consider a metarule being applied when learning the predicate \textit{last(A,B)} where a is a list and b is the last element in it. Given the positive example 
 \begin{minted}{Prolog}
 last([a,l,g,o,r,i,t,h,m],m).
 \end{minted}  
@@ -98,12 +98,19 @@ As well as the background predicates \textit{reverse/2} and \textit{head/2} the 
 last(A,B) :- reverse(A,C), head(C,B)
 \end{minted}
 
-\cite{Andrew/ILP-review}
+
+\cite{Andrew/ILP-review}\cite{Rolf/Metagol}\cite{Metagol/Github}
 \begin{enumerate}
 \item Select a positive example (an atom) to generalise. If none exists, stop, otherwise proceed to the next step.
-\item Try to prove an atom using background knowledge by delegating the proof to Prolog. If successful, stop, otherwise proceed to the next step.
-\item Try to unify the atom with the head of a metarule and bind the existentially quantified variables in a metarule to symbols in the predicate and constant signatures. Save the substitutions and try to prove the body of the metarule through meta-interpretation (by treating the body atoms as examples and applying step 2 to them).
+\item Try to prove an atom using background knowledge by delegating the proof to Prolog. If successful, go to step 1, otherwise proceed to the next step.
+\item Try to unify the atom with the head of a metarule and either choose predicates from the background knowledge that imply the head to fill the body. Try proving the body predicate, if it cannot be proved try different BK\footnote{To prove the body predicate the whole procedure is called again with the body predicates as the positive examples. For example if we had \texttt{last([a,b],b)} as our positive example and have tried to use the chain metarule to with reverse and head we would then call the whole procedure again with the positive examples as [reverse([a,b], C),head(C,b)] if this was successful then we continue, otherwise we try different predicates}. If no BK can be found that prove the positive example then try adding a new invented predicate and attempt to prove this\footnote{For example we might replace head with an invented predicate in the previous footnote example}.
+\item Once you find a metarule substitution that works add it to the program and move to the next atom
 \end{enumerate}
+
+
+The end hypothesis is all the metarule substitutions. It is the checked that the negative atoms are not implied by the hypothesis, if they are a new one is generated. When the hypothesis is combined with the background knowledge the positive examples, but not the negative examples, are implied.
+
+The choice of metarules determines the structure of the hypothesis. Different choice of metarules will allow different hypotheses to be generated. Deciding which metarules to use for a given task is an unsolved problem \cite{Cropper/Thesis}. For this task a set of 9 derivationally irreducible metarules are used which remain consistent across all tasks.
 \section{ALEPH}
 Aleph is an Prolog variant of the ILP system Progol \cite{Muggleton/Aleph}. As input, like any other ILP system, Aleph takes positive and negative examples represented as a set of facts along with the background knowledge. It also requires \textit{mode declarations} and \textit{determinations} which are specific to Aleph. Mode declarations specify the type of the inputs and outputs of each predicate used e.g. \texttt{plus(+integer,+integer,-integer)} where \texttt{+} signifies an input and \texttt{-} an output.
 Determinations specify which predicates can go in the body of a hypothesis. These determinations take the form of pairs of predicates, the first being the head of the clause and the second a predicate that can appear in its body.
@@ -127,6 +134,10 @@ Mode declarations and determinations are used in step 2 of this procedure to bou
 By default Aleph preforms a bounded breath first search on all the possible rules, enumerating shorter clauses before longer clauses. The search is bounded by several parameters such as maximum clause size and maximum proof depth. The best score is selected as the one with the best $P - N$ value where $P$ is the number of positive rules entailed by the hypothesis and $N$ is the number of negative rules entailed. For this paper we will use Aleph with the default settings.
 
 \section{ILASP}
+\cite{MarkLaw/Thesis}\cite{MarkLaw/ILASP2}\cite{MarkLaw/OG-ILASP}\cite{ILASP-Manuel}
+ILASP is an ILP system based on Answer Set Programming (ASP). An introduction to ASP can be found here \cite{Corapi/ASP}.
+
+
 \chapter{Implementations}
 \section{Eight Puzzle}
 To write an optimal player for Eight Puzzle I decide to use an approach based on best first search.
